--- a/src/app/pages/dte/lottery/create/lottery-create.component.html
+++ b/src/app/pages/dte/lottery/create/lottery-create.component.html
@@ -167,6 +167,38 @@
           </div>
         </mat-tab>
         <mat-tab label="Preview">
+          <div fxLayout="row" fxFlex="100">
+            <div fxFlex="30">
+              <div class="grey-box">
+                <p style="font-style: italic;font-weight: bold;text-align: center;">Floating Icon AYO SRC Toko Home Page</p>
+                <div class="px-24">
+                  <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
+                    accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+                    (fileChange)="changeImage($event)">
+                    <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
+                      <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
+                      <br>
+                      <span matPrefix>Tarik Gambar Kesini</span>
+                    </div>
+                  </div>
+                </div>
+                <p style="font-weight: bold;text-align: center;">Preview</p>
+                <div style="text-align: center;" *ngIf="imageConverted">
+                  <img [src]="imageConverted" alt="Preview Image" width="200px" height="100px">
+                </div>
+                <p style="font-style: italic;font-weight: bold;text-align: center;">Floating Icon AYO SRC Toko Home Page</p>
+              </div>
+            </div>
+            <div fxFlex="1"></div>
+            <div fxFlex="20">
+              <div fxLayout="row" class="px-24">
+                <mat-form-field fxFlex class="is-light form-primary">
+                  <input matInput type="text" placeholder="Header" [formControl]="preview_header"
+                    name="preview_header">
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
         </mat-tab>
       </mat-tab-group>
     </div>
