--- a/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
+++ b/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
@@ -272,6 +272,26 @@
               </mat-form-field>
             </div>
           </div>
+          <div fxLayout="column" fxFlex="70">
+            <div fxLayout="row" fxFlex="100" class="px-24">
+              <p fxFlex="15">Limit Spin</p>
+              <div fxFlex="1"></div>
+              <mat-form-field fxFlex class="is-light form-primary" fxFlex="20">
+                <input matInput type="number" placeholder="" formControlName="name"
+                  name="name">
+              </mat-form-field>
+              <div fxFlex="2"></div>
+              <p style="font-weight: bold;font-style: italic;">Average Coin per Spin = 35</p>
+            </div>
+            <div fxLayout="row" fxFlex="100" class="px-24">
+              <p fxFlex="15">Jumlah Variasi Koin</p>
+              <div fxFlex="1"></div>
+              <mat-form-field fxFlex class="is-light form-primary" fxFlex="20">
+                <input matInput type="number" placeholder="" formControlName="name"
+                  name="name">
+              </mat-form-field>
+            </div>
+          </div>
         </mat-tab>
         <mat-tab label="Preview">
           <div fxLayout="row" fxFlex="100">
