--- a/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
+++ b/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
@@ -272,7 +272,7 @@
               </mat-form-field>
             </div>
           </div>
-          <div fxLayout="column" fxFlex="70">
+          <div fxLayout="column" fxFlex="80">
             <div fxLayout="row" fxFlex="100" class="px-24">
               <p fxFlex="15">Limit Spin</p>
               <div fxFlex="1"></div>
@@ -290,6 +290,145 @@
                 <input matInput type="number" placeholder="" formControlName="name"
                   name="name">
               </mat-form-field>
+            </div>
+            <div fxLayout="row" fxFlex="100" class="px-24">
+              <table class="table" fxFlex="25">
+                <thead>
+                  <tr>
+                    <th>#Coin</th>
+                    <th>#Slice</th>
+                    <th>%Probability</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                    <td>
+                      <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
+                        <input matInput type="number" placeholder="" formControlName="name"
+                          name="name">
+                      </mat-form-field>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <table class="table" fxFlex="25">
+                <thead>
+                  <tr>
+                    <th>Limit Attempt</th>
+                    <th>Total Budget</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">40.000</p>
+                      <p style="font-style: italic;padding:15px;">50.000</p>
+                      <p style="font-style: italic;padding:15px;">10.000</p>
+                    </td>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">80.000.000</p>
+                      <p style="font-style: italic;padding:15px;">200.000.000</p>
+                      <p style="font-style: italic;padding:15px;">60.000.000</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <table class="table" fxFlex="25">
+                <thead>
+                  <tr>
+                    <th>Actual Spin</th>
+                    <th>Actual Budget</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">20.000</p>
+                      <p style="font-style: italic;padding:15px;">25.000</p>
+                      <p style="font-style: italic;padding:15px;">5.000</p>
+                    </td>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">40.000.000</p>
+                      <p style="font-style: italic;padding:15px;">100.000.000</p>
+                      <p style="font-style: italic;padding:15px;">30.000.000</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <table class="table" fxFlex="25">
+                <thead>
+                  <tr>
+                    <th>Sisa Spin</th>
+                    <th>Sisa Budget</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">20.000</p>
+                      <p style="font-style: italic;padding:15px;">25.000</p>
+                      <p style="font-style: italic;padding:15px;">5.000</p>
+                    </td>
+                    <td>
+                      <p style="font-style: italic;padding:15px;">40.000.000</p>
+                      <p style="font-style: italic;padding:15px;">100.000.000</p>
+                      <p style="font-style: italic;padding:15px;">30.000.000</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </mat-tab>
