--- a/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
@@ -7,13 +7,15 @@
       <mat-checkbox id="nonCoinReward" [formControl]="non_coin_reward" name="non_coin_reward" (change)="selectChange($event)">
         Reward Hadiah (Non Coin)
       </mat-checkbox>
-      <div>
-        <mat-form-field style="width: 100%" *ngIf="form.value.non_coin_reward">
-          <input id="rewardDescription" matInput type="text" maxlength="20" formControlName="reward_description" placeholder="Keterangan Reward" (change)="changeRewardDesc($event)" />
-        </mat-form-field>
-        <div class="mat-error" style="font-size: 14px; margin-top: -10px;" *ngIf="isRewardError">
-          Keterangan harus diisi
-        </div>
+      <mat-checkbox id="auto-submit" [formControl]="auto_submit" name="auto_submit">Auto Submit</mat-checkbox>
+    </div>
+
+    <div style="width: 50%" *ngIf="form.value.non_coin_reward">
+      <mat-form-field style="width: 100%">
+        <input id="rewardDescription" matInput type="text" maxlength="20" formControlName="reward_description" placeholder="Keterangan Reward" (change)="changeRewardDesc($event)" />
+      </mat-form-field>
+      <div class="mat-error" style="font-size: 14px; margin-top: -10px;" *ngIf="isRewardError">
+        Keterangan harus diisi
       </div>
     </div>
 
@@ -81,6 +83,17 @@
           placeholder="Coin Verification" />
       </mat-form-field>
     </div>
+
+    <div *ngIf="form.value.verifikasi">
+      <mat-form-field style="width: 100%">
+        <input id="xpSubmission" matInput type="text" (keypress)="numberOnly($event)" formControlName="xp_submission" placeholder="XP Submission" />
+      </mat-form-field>
+
+      <mat-form-field style="width: 100%">
+        <input id="xpVerification" matInput type="text" (keypress)="numberOnly($event)" formControlName="xp_verification" placeholder="XP Verification" />
+      </mat-form-field>
+    </div>
+    
     <mat-form-field style="width: 100%;" *ngIf="data && data.data && data.data.link_misi">
       <input matInput type="text" placeholder="Link Misi" [value]="data.data.link_misi" disabled #linkMisi>
       <mat-icon matSuffix (click)="copyMessage(data.data.link_misi)" style="cursor: pointer;"
