--- a/src/app/pages/dte/audience/index/audience-index.component.html
+++ b/src/app/pages/dte/audience/index/audience-index.component.html
@@ -67,9 +67,7 @@
 
             <ngx-datatable-column name="{{ ls.locale.dte.audience.text3 }}" prop="status">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                <span id="status" *ngIf="row.status === 'rejected'" class="text-boxed mat-red-700-bg">{{'dte.approval_coin_adjustment.rejected' | translate}}</span>
-                <span id="status" *ngIf="row.status === 'pending'" class="text-boxed mat-yellow-700-bg">{{'dte.approval_coin_adjustment.pending' | translate}}</span>
-                <span id="status" *ngIf="row.status === 'approved'" class="text-boxed mat-green-700-bg">{{'dte.approval_coin_adjustment.approved' | translate}}</span>
+                <span id="status" [ngClass]="classStatus(row.status, row.import_audience_status)">{{ renderStatus(row.status, row.import_audience_status) }}</span>
               </ng-template>
             </ngx-datatable-column>
 
